# schreinerei

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  LOCAL_MOLLIE_TESTING.md  README.md  TENANT_ONBOARDING_SETUP.md  dockerfile.backend  dockerfile.frontend  nginx.conf
.beads/: config.yaml  issues.jsonl  metadata.json
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.planning/: BUG-REPORT.md  E2E-PATTERNS.md  FEATURES.md  ISSUE-BACKLOG.md  MILESTONES.md  MOBILE-FIRST-CHECKLIST.md  PROJECT.md  QA-PLAYBOOK.md  REQUIREMENT-REVIEW-SUMMARY.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.11-MILESTONE-AUDIT.md  v1.7-MILESTONE-AUDIT.md  v1.9-MILESTONE-AUDIT.md
.playwright-cli/: page-2026-04-29T13-50-54-017Z.yml  page-2026-04-29T14-08-35-653Z.yml  page-2026-04-29T14-09-39-189Z.yml  page-2026-04-29T14-09-48-150Z.yml  page-2026-04-29T14-09-59-040Z.yml  page-2026-04-29T14-10-07-277Z.yml  page-2026-04-29T14-10-15-867Z.yml  page-2026-04-29T14-10-24-030Z.yml  page-2026-04-29T14-10-32-226Z.yml  page-2026-04-29T14-10-51-547Z.yml
.sqlx/: query-596845783f11ee3a9ad9541dcf755b1a2c9817904b857be5bd66babad9ebb32a.json
docs/: API-TESTING.md  keycloak-frontend-setup.md  keycloak-organizations-setup.md  keycloak-setup.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
migrations/: 001_initial_schema.sql  002_inventory_schema.sql  003_domain_events.sql  004_order_requests.sql  005_sites_schema.sql  006_fleet_schema.sql  (+27 more)
src/: lib.rs  (+5 more)
(+763 files in other folders)
