[package]
name = "schreinerei"
version = "0.1.10"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
config = "0.14"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
async-trait = "0.1"
qrcode = "0.14"
base64 = "0.22"
ts-rs = { version = "12", features = ["serde-compat", "chrono-impl", "uuid-impl", "url-impl"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
